fix: - wrap blog page in full layout

--- a/components/BlogCommon/ArticlesList/styles.module.scss
+++ b/components/BlogCommon/ArticlesList/styles.module.scss
@@ -18,21 +18,20 @@
 }
 
 .articlesList {
-  max-width: 1500px;
-  margin: 30px 0 0;
+  margin: 30px -12px 0;
 
   @include flex(row, initial, initial, wrap);
 
   @include macbook-fifteen {
-    margin: 20px 0 0;
+    margin: 20px -12px 0;
   }
 
   @include phone {
     flex-direction: column;
-    margin-top: 75px;
+    margin: 0;
 
-    & > article:first-child {
-      margin-top: 20px;
+    & > article:first-of-type {
+      margin-top: 15px;
     }
   }
 
