--- a/components/Common/SubscribeBlock/styles.module.scss
+++ b/components/Common/SubscribeBlock/styles.module.scss
@@ -2,7 +2,7 @@
 
 .blogPage {
   width: 100%;
-  margin: 105px 12px 105px;
+  margin: 100px 12px;
 
   @include phone {
     margin: 50px 0;
